--- a/index.html
+++ b/index.html
@@ -13,23 +13,32 @@
 <body>
   
 <div class="container">
-
-    <div class="nav">
-        <a href="#"><i class="fas fa-microphone-alt"></i></a>
-        <a href="#">About Us</a>
-        <a href="#"> News</a>
-        <a href="#">Contact</a>
-        <a href="#">Gallery</a>
-        <button class="btn">Sign Up</button>
-        <button class="btn">Sign In</button>
+    <div class="wrap_nav">
+        <div class="nav_links">
+            <a href="#"><i class="fas fa-microphone-alt"></i></a>
+            <a href="#">About Us</a>
+            <a href="#"> News</a>
+            <a href="#">Contact</a>
+            <a href="#">Gallery</a>
+        </div>
+        <div class="nav_buttons">
+            <button class="btn">Sign Up</button>
+            <button class="btn">Sign In</button>
+        </div>
     </div>
+        <div class="icons">
+            <a href="#">  <i class="fab fa-facebook"></i></a>
+            <a href="#"> <i class="fab fa-instagram"></i></a>
+            <a href="#"> <i class="fab fa-pinterest-square"></i></a>
+            <a href="#"><i class="fab fa-twitter-square"></i></a>
+        </div>
 
-    <div class="icons">
-        <a href="#">  <i class="fab fa-facebook"></i></a>
-        <a href="#"> <i class="fab fa-instagram"></i></a>
-        <a href="#"> <i class="fab fa-pinterest-square"></i></a>
-        <a href="#"><i class="fab fa-twitter-square"></i></a>
+    <div class="main_title">
+        <h1>The Microphones</h1>
+        <p>"We are the solution to your problem"</p>
+
     </div>
+   
 
     <div class="wrap_footer">
 
@@ -39,7 +48,7 @@
 
                     <div class="wrap_copyright"><i class="far fa-copyright"></i> 2021 The Microphones <i class="far fa-registered"></i> - All Rights Reserved</div>
 
-                        <div class="wrap_icons">
+                        <div class="wrap_icons_footer">
                             <a href="#">  <i class="fab fa-facebook"></i></a>
                             <a href="#"> <i class="fab fa-instagram"></i></a>
                             <a href="#"> <i class="fab fa-pinterest-square"></i></a>
