--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/c9c615f772.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
 </head>
 <body>
   
 <div class="container">
     <div class="wrap_nav">
         <div class="nav_links">
-            <a href="#"><i class="fas fa-microphone-alt"></i></a>
+            <a href="#"><i class="mic_nav fas fa-microphone-alt"></i></a>
             <a href="#">About Us</a>
             <a href="#"> News</a>
             <a href="#">Contact</a>
@@ -34,7 +35,7 @@
         </div>
 
     <div class="main_title">
-        <h1>The Microphones</h1>
+        <h1>The M<i class=" mic fas fa-microphone-alt"></i>crophones</h1>
         <p>"We are the solution to your problem"</p>
 
     </div>
@@ -46,7 +47,7 @@
 
                 <div class="content_footer">
 
-                    <div class="wrap_copyright"><i class="far fa-copyright"></i> 2021 The Microphones <i class="far fa-registered"></i> - All Rights Reserved</div>
+                    <div class="wrap_copyright"><i class="far fa-copyright"></i> 2021 The M<i class="mic_footer fas fa-microphone-alt"></i>crophones <i class="far fa-registered"></i> - All Rights Reserved</div>
 
                         <div class="wrap_icons_footer">
                             <a href="#">  <i class="fab fa-facebook"></i></a>
