--- a/index.html
+++ b/index.html
@@ -14,7 +14,26 @@
 <body>
   
 <div class="container">
-    
+
+    <div class="wrap_nav">
+        <div class="nav_links">
+            <a href="#"><i class="mic_nav fas fa-microphone-alt"></i></a>
+            <a href="#">About Us</a>
+            <a href="#"> News</a>
+            <a href="#">Contact</a>
+            <a href="#">Gallery</a>
+        </div>
+        <div class="nav_buttons">
+            <button class="btn">Sign Up</button>
+            <button class="btn">Sign In</button>
+        </div>
+    </div>
+        <div class="icons">
+            <a href="#">  <i class="fab fa-facebook"></i></a>
+            <a href="#"> <i class="fab fa-instagram"></i></a>
+            <a href="#"> <i class="fab fa-pinterest-square"></i></a>
+            <a href="#"><i class="fab fa-twitter-square"></i></a>
+        </div>
 
     <div class="main_title">
         <h1>The M<i class=" mic fas fa-microphone-alt"></i>crophones</h1>
@@ -22,20 +41,16 @@
 
     </div>
    
-
     <div class="wrap_footer">
-
         <div class="footer">
-
                 <div class="content_footer">
                     <div class="wrap_copyright"><i class="far fa-copyright"></i> 2021 The M<i class="mic_footer fas fa-microphone-alt"></i>crophones <i class="far fa-registered"></i> - All Rights Reserved</div>
                 </div>
         </div>
-        
     </div>
-
 </div>
 
 
 </body>
+
 </html>
