--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="wrap_footer">
             <div class="footer">
                     <div class="content_footer">
-                        <div class="wrap_copyright"><i class="far fa-copyright"></i> 2021 The M<i class="mic_footer fas fa-microphone-alt"></i>crophones <i class="far fa-registered"></i> - All Rights Reserved</div>
+                        <div class="wrap_copyright"><i class="far fa-copyright"></i> 2021 The M<i class="mic_footer fas fa-microphone-alt"></i>crophones <i class="mic_footer far fa-registered"></i> - All Rights Reserved</div>
                     </div>
             </div>
         </div>
