--- a/index.html
+++ b/index.html
@@ -37,63 +37,57 @@
       <div class="grid-container">
         <div class="bg1 demo-grid" style="background: url('./images/concert-1.jpg'); background-size: cover;
         background-attachment: fixed;">
-          <h2> 1 <span> 2 </span> </h2>
-          <p> 12 </p>
+           <div class="main_title">
+            <h1>The M<i class=" mic fas fa-microphone-alt"></i>crophones</h1>
+            <p>"We are the solution to your problem"</p>
+           </div>
         </div>
         <div class="bg1 demo-grid" style="background: url('./images/concert-1.jpg'); background-size: cover;
         background-attachment: fixed;">
-          <h2> 2 <span> 2 </span> </h2>
-          <p> 12 </p>
         </div>
         <div class="bg2 demo-grid" style="background: url('./images/concert-1.jpg'); background-size: cover;
         background-attachment: fixed;">
-          <h2> 3 <span> 2 </span> </h2>
-          <p> 12 </p>
         </div>
         <div class="bg1 demo-grid" style="background: url('./images/concert-2.jpg'); background-size: cover;
         background-attachment: fixed;">
-          <h2 class="white cursor"> 4 <span> 2 </span> </h2>
-          <p> 12 </p>
+          <div style="color: #B8E1F2;">People from all around the world <br> have used our services <br> @The </i>M<i class="mic fas fa-microphone-alt"></i>crophones </div>
         </div>
         <div class="bg1 demo-grid" style="background: url('./images/concert-1.jpg'); background-size: cover;
         background-attachment: fixed;">
-          <h2> 5 <span> 2 </span> </h2>
-          <p> 12 </p>
+           <div> And so, The </i>M<i class="mic fas fa-microphone-alt"></i>crophones <br> just continue to grow and <br> get recognized by their flawless exicution</div>
         </div>
         <div class="bg1 demo-grid" style="background: url('./images/concert-1.jpg'); background-size: cover;
         background-attachment: fixed;">
-          <h2> 6 <span> 2 </span> </h2>
-          <p> 12 </p>
+          <div>195 countries in the world, and 114 have already rented our services</div>
+          <br>
+          <div>And we are stationary in 35 off them and represent many big artist and celebrites in the branch</div>
         </div>
         <div class="bg1 demo-grid" style="background: url('./images/concert-2.jpg'); background-size: cover;
         background-attachment: fixed;">
-          <h2 class="white"> 7 <span> 2 </span> </h2>
-          <p> 12 </p>
+         <div style="color: #B8E1F2; ">
+           <div>We now have over 3 000 000 happy costumers and will always offer money-back garantee if your not happy with our services</div>
+           <div>We are very confident in our brand and the artist that represent us</div>
+         </div>
         </div>
         <div class="bg2 demo-grid" style="background: url('./images/concert-2.jpg'); background-size: cover;
         background-attachment: fixed;">
-          <h2 class="white"> 8 <span> 2 </span> </h2>
-          <p> 12 </p>
+          <div style="color: #B8E1F2; ">
+            Music speaks to the heart in ways words cannot express
+          </div>
         </div>
         <div class="bg1 demo-grid" style="background: url('./images/concert-1.jpg'); background-size: cover;
         background-attachment: fixed;">
-          <h2> 9 <span> 2 </span> </h2>
-          <p> 12 </p>
+          <div>Without you, this wouldn't have been possible</div>
         </div>
         <div class="bg1 demo-grid" style="background: url('./images/concert-2.jpg'); background-size: cover;
         background-attachment: fixed;">
-          <h2 class="white"> 10 <span> 2 </span> </h2>
-          <p> 12 </p>
         </div>
         <div class="bg2 demo-grid" style="background: url('./images/concert-2.jpg'); background-size: cover;
         background-attachment: fixed;">
-          <h2 class="white"> 11 <span> 2 </span> </h2>
-          <p> 12 </p>
+         <div style="color: #B8E1F2; ">Thank you all! Sincerly The </i>M<i class="mic_footer fas fa-microphone-alt"></i>crophones <i class="far fa-registered"></i></div>
         </div>
         <div class="bg1 demo-grid" style="background: url('./images/concert-2.jpg'); background-size: cover;
         background-attachment: fixed;">
-          <h2 class="white"> 12 <span> 2 </span> </h2>
-          <p> 12 </p>
         </div>
   
       </div>
@@ -166,7 +160,7 @@
 
       <div class="mySlides">
        <div class="numbertext">13 / 19</div>
-         <img src="images/bridge.jpg" style="height:80%; width:100%">
+         <img src="images/bridge-2.jpg" style="height:80%; width:100%">
      </div>
 
       <div class="mySlides">
@@ -244,25 +238,25 @@
           <img class="demo cursor" src="images/dj-4.jpg" style="width:100%" onclick="currentSlide(11)" alt="DJ">
         </div>
         <div class="column">
-          <img class="demo cursor" src="images/guit.jpg" style="width:100%" onclick="currentSlide(12)" alt="DJ">
+          <img class="demo cursor" src="images/guit.jpg" style="width:100%" onclick="currentSlide(12)" alt="Solo">
         </div>
         <div class="column">
-          <img class="demo cursor" src="images/bridge.jpg" style="width:100%" onclick="currentSlide(13)" alt="interlude">
+          <img class="demo cursor" src="images/bridge-2.jpg" style="width:100%" onclick="currentSlide(13)" alt="interlude">
         </div>
         <div class="column">
-          <img class="demo cursor" src="images/concert-8-tall.jpg" style="width:100%" onclick="currentSlide(14)" alt="Event-tall">
+          <img class="demo cursor" src="images/concert-8-tall.jpg" style="width:100%" onclick="currentSlide(14)" alt="Event">
         </div>
         <div class="column">
-          <img class="demo cursor" src="images/concert-10-tall.jpg" style="width:100%" onclick="currentSlide(15)" alt="Experience-tall">
+          <img class="demo cursor" src="images/concert-10-tall.jpg" style="width:100%" onclick="currentSlide(15)" alt="Experience">
         </div>
         <div class="column">
-          <img class="demo cursor" src="images/concert-11-tall.jpg" style="width:100%" onclick="currentSlide(16)" alt="Event-tall">
+          <img class="demo cursor" src="images/concert-11-tall.jpg" style="width:100%" onclick="currentSlide(16)" alt="Event">
         </div>
         <div class="column">
-          <img class="demo cursor" src="images/dj-3-tall.jpg" style="width:100%" onclick="currentSlide(17)" alt="DJ-tall">
+          <img class="demo cursor" src="images/dj-3-tall.jpg" style="width:100%" onclick="currentSlide(17)" alt="DJ">
         </div>
         <div class="column">
-          <img class="demo cursor" src="images/dj-5-tall.jpg" style="width:100%" onclick="currentSlide(18)" alt="DJ-tall">
+          <img class="demo cursor" src="images/dj-5-tall.jpg" style="width:100%" onclick="currentSlide(18)" alt="DJ">
         </div>
         <div class="column">
           <img class="demo cursor" src="images/closer.jpg" style="width:100%" onclick="currentSlide(19)" alt="Closer">
