--- a/pages/news.html
+++ b/pages/news.html
@@ -5,39 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Microphone News</title>
-    <link rel="stylesheet" href="../styles/news-nav.css">
+    <link rel="stylesheet" href="../styles/news.css">
     <script src="https://kit.fontawesome.com/62ec7cd660.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <nav>
-        <div class="nav">
-            <div class="logo">
-                <a href="#">
-                    <i class="fas fa-microphone-alt"></i>
-                </a>
+        <div class="wrap_nav">
+            <div class="nav_links">
+                <a href="../index.html"><i class="fas fa-microphone-alt"></i></a>
+                <a href="../pages/about-us.html">About Us</a>
+                <a href="../pages/news.html"> News</a>
+                <a href="../pages/contact.html">Contact</a>
+                <a href="../pages/galery.html">Gallery</a>
             </div>
-            <ul class="nav-list">
-                <li>
-                    <a href="#">About Us</a>
-                </li>
-                <li>
-                    <a href="#"> News</a>
-                </li>
-                <li>
-                    <a href="#">Contact</a>
-                </li>
-                <li>
-                    <a href="#">Gallery</a>
-                </li>
-            </ul>
-            <div class="sign">
+            <div class="nav_buttons">
                 <button class="btn">Sign Up</button>
                 <button class="btn">Sign In</button>
             </div>
         </div>
+        <div class="icons">
+            <a href="#"> <i class="fab fa-facebook"></i></a>
+            <a href="#"> <i class="fab fa-instagram-square"></i></a>
+            <a href="#"> <i class="fab fa-pinterest-square"></i></a>
+            <a href="#"><i class="fab fa-twitter-square"></i></a>
+        </div>    
     </nav>
     <main>
-        <h1>News</h1>
+        <h1>The M<i class="fas fa-microphone-alt"></i>crophone News</h1>
+        <p>"Music and rhythm find their way to the hidden soul"</p>
         <section class="slider-img">
             <div class="slider">
                 <div class="images">
@@ -123,16 +118,11 @@
     <footer>
         <div class="wrap_footer">
             <div class="footer">
-                <div class="content_footer">
-                    <div class="wrap_copyright"><i class="far fa-copyright"></i> 2021 The Microphones <i class="fa fa-registered"></i> - All Rights Reserved</div>
-                    <div class="wrap_icons">
-                        <a href="#"><i class="fab fa-facebook"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-pinterest-square"></i></a>
-                        <a href="#"><i class="fab fa-twitter-square"></i></a>
+                    <div class="content_footer">
+                        <div class="wrap_copyright"><i class="far fa-copyright"></i> 2021 The M<i class="mic_footer fas fa-microphone-alt">
+                        </i>crophones <i class="far fa-registered"></i> - All Rights Reserved</div>
                     </div>
-                </div>
-            </div>    
+            </div>
         </div>
     </footer>
 </body>
