--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,49 +11,51 @@
     <script src="https://kit.fontawesome.com/c9c615f772.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
 </head>
+
 <body>
-  
-<div class="container">
 
-    <div class="nav">
-        <a href="#"><i class="fas fa-microphone-alt"></i></a>
-        <a href="#">About Us</a>
-        <a href="#"> News</a>
-        <a href="#">Contact</a>
-        <a href="#">Gallery</a>
-        <button class="btn">Sign Up</button>
-        <button class="btn">Sign In</button>
-    </div>
+    <div class="container">
 
-    <div class="icons">
-        <a href="#">  <i class="fab fa-facebook"></i></a>
-        <a href="#"> <i class="fab fa-instagram"></i></a>
-        <a href="#"> <i class="fab fa-pinterest-square"></i></a>
-        <a href="#"><i class="fab fa-twitter-square"></i></a>
-    </div>
+        <div class="nav">
+            <a href="#"><i class="fas fa-microphone-alt"></i></a>
+            <a href="#">About Us</a>
+            <a href="#"> News</a>
+            <a href="#">Contact</a>
+            <a href="#">Gallery</a>
+            <button class="btn">Sign Up</button>
+            <button class="btn">Sign In</button>
+        </div>
 
-    <div class="wrap_footer">
+        <div class="icons">
+            <a href="#"> <i class="fab fa-facebook"></i></a>
+            <a href="#"> <i class="fab fa-instagram"></i></a>
+            <a href="#"> <i class="fab fa-pinterest-square"></i></a>
+            <a href="#"><i class="fab fa-twitter-square"></i></a>
+        </div>
 
-        <div class="footer">
+        <div class="wrap_footer">
+
+            <div class="footer">
 
                 <div class="content_footer">
 
-                    <div class="wrap_copyright"><i class="far fa-copyright"></i> 2021 The Microphones <i class="far fa-registered"></i> - All Rights Reserved</div>
+                    <div class="wrap_copyright"><i class="far fa-copyright"></i> 2021 The M<i class="mic_footer fas fa-microphone-alt"></i>crophones <i class="far fa-registered"></i> - All Rights Reserved</div>
 
-                        <div class="wrap_icons">
-                            <a href="#">  <i class="fab fa-facebook"></i></a>
-                            <a href="#"> <i class="fab fa-instagram"></i></a>
-                            <a href="#"> <i class="fab fa-pinterest-square"></i></a>
-                            <a href="#"><i class="fab fa-twitter-square"></i></a>
-                        </div>
-                    
+                    <div class="wrap_icons">
+                        <a href="#"> <i class="fab fa-facebook"></i></a>
+                        <a href="#"> <i class="fab fa-instagram"></i></a>
+                        <a href="#"> <i class="fab fa-pinterest-square"></i></a>
+                        <a href="#"><i class="fab fa-twitter-square"></i></a>
+                    </div>
+
                 </div>
-        </div>
-        
-    </div>
+            </div>
 
-</div>
+        </div>
+
+    </div>
 
 
 </body>
+
 </html>
