--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -88,7 +88,7 @@
         <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="300">
                 <div class="icon"><i class="bx bx-tachometer"></i></div>
-                <h4 class="title"><a href="">Professinals</a></h4>
+                <h4 class="title"><a href="">Professionals</a></h4>
                 <p class="description">
                     All musicians hand-picked by our team of experts
                 </p>
@@ -126,7 +126,7 @@
               justify-content-center
             " data-aos="fade-up" data-aos-delay="100">
                     <h3>
-                        Microphones
+                        The Microphones
                     </h3>
                     <p>
                         Microphones is a music agency providing live band and musicians for every occasion. As a one-stop entertainment agency, we provide musicians to cater to all your requirements.
