--- a/pages/news.html
+++ b/pages/news.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Microphones News</title>
     <link rel="stylesheet" href="../styles/news.css">
+    <link rel="stylesheet" href="../styles/normalize.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://codepen.io/z-/pen/a8e37caf2a04602ea5815e5acedab458.js"></script>
     <script src="https://kit.fontawesome.com/62ec7cd660.js" crossorigin="anonymous"></script>
@@ -146,13 +147,10 @@
         </section>
     </main>
     <footer>
-        <div class="wrap_footer">
-            <div class="footer">
-                <div class="content_footer">
-                    <div class="wrap_copyright">
-                        <i class="far fa-copyright"></i> 2021 The M<i class="mic_footer fas fa-microphone-alt">
-                    </i>crophones <i class="far fa-registered"></i> - All Rights Reserved</div>
-                </div>
+        <div class="content_footer">
+            <div class="wrap_copyright">
+                <i class="far fa-copyright"></i> 2021 The M<i class="mic_footer fas fa-microphone-alt">
+                </i>crophones <i class="far fa-registered"></i> - All Rights Reserved
             </div>
         </div>
     </footer>
