--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -25,11 +25,11 @@
 
     <div class="wrap_nav">
         <div class="nav_links">
-            <a href="#"><i class="mic_nav fas fa-microphone-alt"></i></a>
-            <a href="#">About Us</a>
-            <a href="#"> News</a>
-            <a href="#">Contact</a>
-            <a href="#">Gallery</a>
+            <a href="/index.html"><i class="mic_nav fas fa-microphone-alt"></i></a>
+            <a href="/pages/about-us.html">About Us</a>
+            <a href="/pages/news.html"> News</a>
+            <a href="contact.html">Contact</a>
+            <a href="gallery.html">Gallery</a>
         </div>
         <div class="nav_buttons">
             <button class="btn">Sign Up</button>
@@ -129,7 +129,7 @@
                         The Microphones
                     </h3>
                     <p>
-                        Microphones is a music agency providing live band and musicians for every occasion. As a one-stop entertainment agency, we provide musicians to cater to all your requirements.
+                        The Microphones is a music agency providing live band and musicians for every occasion. As a one-stop entertainment agency, we provide musicians to cater to all your requirements.
                     </p>
                     <ul>
                         <li>
