--- a/pages/contact.html
+++ b/pages/contact.html
@@ -15,11 +15,11 @@
     <div class="container">
         <div class="wrap_nav">
             <div class="nav_links">
-                <a href="#"><i class="mic_nav fas fa-microphone-alt"></i></a>
-                <a href="#">About Us</a>
-                <a href="#"> News</a>
-                <a href="#">Contact</a>
-                <a href="#">Gallery</a>
+                <a href="/index.html"><i class="mic_nav fas fa-microphone-alt"></i></a>
+                <a href="about-us.html">About Us</a>
+                <a href="news.html"> News</a>
+                <a href="contact.html">Contact</a>
+                <a href="gallery.html">Gallery</a>
             </div>
             <div class="nav_buttons">
                 <button class="btn">Sign Up</button>
