--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -18,19 +18,19 @@
 
       <div class="nav_links">
 
-          <a href="#">
+          <a href="/index.html">
             <i class="mic_nav fas fa-microphone-alt"></i>
           </a>
-          <a href="#">
+          <a href="about-us.html">
             About Us
           </a>
-          <a href="#">
+          <a href="news.html">
             News
           </a>
-          <a href="#">
+          <a href="contact.html">
             Contact
           </a>
-          <a href="#">
+          <a href="gallery.html">
             Gallery
           </a>
 
