--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -5,15 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gallery</title>
-    <link rel="stylesheet" href="/normalize.css">
-    <link rel="stylesheet" href="/styles/gallery.css">
+    <link rel="stylesheet" href="../normalize.css">
+    <link rel="stylesheet" href="../styles/gallery.css">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/c9c615f772.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
 </head>
 <body>
 
-  <div class="container" style="background-image: url(/img/gallery-images/music.jpg);">
+  <div class="container" style="background-image: url(../img/gallery-images/music.jpg);">
   
     <div class="wrap_nav">
 
@@ -73,7 +73,7 @@
 
       <div class="grid-container">
 
-        <div class="bg1 demo-grid" style="background: url('/img/gallery-images/concert-1.jpg'); background-size: cover;
+        <div class="bg1 demo-grid" style="background: url('../img/gallery-images/concert-1.jpg'); background-size: cover;
           background-attachment: fixed;">
            <div>
             <h1>The M<i class=" mic fas fa-microphone-alt"></i>crophones</h1>
@@ -81,15 +81,15 @@
            </div>
         </div>
 
-        <div class="bg1 demo-grid" style="background: url('/img/gallery-images/concert-1.jpg'); background-size: cover;
+        <div class="bg1 demo-grid" style="background: url('../img/gallery-images/concert-1.jpg'); background-size: cover;
           background-attachment: fixed;">
         </div>
 
-        <div class="bg2 demo-grid" style="background: url('/img/gallery-images/concert-1.jpg'); background-size: cover;
+        <div class="bg2 demo-grid" style="background: url('../img/gallery-images/concert-1.jpg'); background-size: cover;
           background-attachment: fixed;">
         </div>
 
-        <div class="bg1 demo-grid" style="background: url('/img/gallery-images/concert-2.jpg'); background-size: cover;
+        <div class="bg1 demo-grid" style="background: url('../img/gallery-images/concert-2.jpg'); background-size: cover;
           background-attachment: fixed;">
           <div style="color: #B8E1F2;">
              People from all around the world 
@@ -98,7 +98,7 @@
           </div>
         </div>
 
-        <div class="bg1 demo-grid" style="background: url('/img/gallery-images/concert-1.jpg'); background-size: cover;
+        <div class="bg1 demo-grid" style="background: url('../img/gallery-images/concert-1.jpg'); background-size: cover;
           background-attachment: fixed;">
            <div> 
               And so, The </i>M<i class="mic fas fa-microphone-alt"></i>crophones 
@@ -107,7 +107,7 @@
             </div>
         </div>
 
-        <div class="bg1 demo-grid" style="background: url('/img/gallery-images/concert-1.jpg'); background-size: cover;
+        <div class="bg1 demo-grid" style="background: url('../img/gallery-images/concert-1.jpg'); background-size: cover;
           background-attachment: fixed;">
           <div>
             195 countries in the world, and 114 have already rented our services
@@ -118,7 +118,7 @@
           </div>
         </div>
 
-        <div class="bg1 demo-grid" style="background: url('/img/gallery-images/concert-2.jpg'); background-size: cover;
+        <div class="bg1 demo-grid" style="background: url('../img/gallery-images/concert-2.jpg'); background-size: cover;
           background-attachment: fixed;">
          <div style="color: #B8E1F2; ">
            <div>
@@ -130,32 +130,32 @@
          </div>
         </div>
 
-        <div class="bg2 demo-grid" style="background: url('/img/gallery-images/concert-2.jpg'); background-size: cover;
+        <div class="bg2 demo-grid" style="background: url('../img/gallery-images/concert-2.jpg'); background-size: cover;
           background-attachment: fixed;">
           <div style="color: #B8E1F2; ">
             Music speaks to the heart in ways words cannot express
           </div>
         </div>
 
-        <div class="bg1 demo-grid" style="background: url('/img/gallery-images/concert-1.jpg'); background-size: cover;
+        <div class="bg1 demo-grid" style="background: url('../img/gallery-images/concert-1.jpg'); background-size: cover;
           background-attachment: fixed;">
           <div>
             Without you, this wouldn't have been possible
           </div>
         </div>
 
-        <div class="bg1 demo-grid" style="background: url('/img/gallery-images/concert-2.jpg'); background-size: cover;
+        <div class="bg1 demo-grid" style="background: url('../img/gallery-images/concert-2.jpg'); background-size: cover;
          background-attachment: fixed;">
         </div>
 
-        <div class="bg2 demo-grid" style="background: url('/img/gallery-images/concert-2.jpg'); background-size: cover;
+        <div class="bg2 demo-grid" style="background: url('../img/gallery-images/concert-2.jpg'); background-size: cover;
           background-attachment: fixed;">
          <div style="color: #B8E1F2; ">
           Thank you all! Sincerly The </i>M<i class="mic_footer fas fa-microphone-alt"></i>crophones <i class="far fa-registered"></i>
          </div>
         </div>
 
-        <div class="bg1 demo-grid" style="background: url('/img/gallery-images/concert-2.jpg'); background-size: cover;
+        <div class="bg1 demo-grid" style="background: url('../img/gallery-images/concert-2.jpg'); background-size: cover;
           background-attachment: fixed;">
         </div>
   
@@ -312,61 +312,61 @@
         <!-- Thumbnail images -->
      <div class="row">
         <div class="column">
-          <img class="demo cursor images" src="/img/gallery-images/opener.jpg" style="width:100%" onclick="currentSlide(1)" alt="Welcome">
+          <img class="demo cursor images" src="../img/gallery-images/opener.jpg" style="width:100%" onclick="currentSlide(1)" alt="Welcome">
         </div>
         <div class="column">
-          <img class="demo cursor images" src="/img/gallery-images/concert-3.jpg" style="width:100%" onclick="currentSlide(2)" alt="Event">
+          <img class="demo cursor images" src="../img/gallery-images/concert-3.jpg" style="width:100%" onclick="currentSlide(2)" alt="Event">
         </div>
         <div class="column">
-          <img class="demo cursor images" src="/img/gallery-images/concert-4.jpg" style="width:100%" onclick="currentSlide(3)" alt="Experience">
+          <img class="demo cursor images" src="../img/gallery-images/concert-4.jpg" style="width:100%" onclick="currentSlide(3)" alt="Experience">
         </div>
         <div class="column">
-          <img class="demo cursor images" src="/img/gallery-images/concert-5.jpg" style="width:100%" onclick="currentSlide(4)" alt="Event">
+          <img class="demo cursor images" src="../img/gallery-images/concert-5.jpg" style="width:100%" onclick="currentSlide(4)" alt="Event">
         </div>
         <div class="column">
-          <img class="demo cursor images" src="/img/gallery-images/concert-6.jpg" style="width:100%" onclick="currentSlide(5)" alt="Experience">
+          <img class="demo cursor images" src="../img/gallery-images/concert-6.jpg" style="width:100%" onclick="currentSlide(5)" alt="Experience">
         </div>
         <div class="column">
-          <img class="demo cursor images" src="/img/gallery-images/concert-7.jpg" style="width:100%" onclick="currentSlide(6)" alt="Event">
+          <img class="demo cursor images" src="../img/gallery-images/concert-7.jpg" style="width:100%" onclick="currentSlide(6)" alt="Event">
         </div>
         <div class="column">
-          <img class="demo cursor images" src="/img/gallery-images/concert-9.jpg" style="width:100%" onclick="currentSlide(7)" alt="Experience">
+          <img class="demo cursor images" src="../img/gallery-images/concert-9.jpg" style="width:100%" onclick="currentSlide(7)" alt="Experience">
         </div>
         <div class="column">
-          <img class="demo cursor images" src="/img/gallery-images/bridge.jpg" style="width:100%" onclick="currentSlide(8)" alt="interlude">
+          <img class="demo cursor images" src="../img/gallery-images/bridge.jpg" style="width:100%" onclick="currentSlide(8)" alt="interlude">
         </div>
         <div class="column">
-          <img class="demo cursor images" src="/img/gallery-images/dj.jpg" style="width:100%" onclick="currentSlide(9)" alt="DJ">
+          <img class="demo cursor images" src="../img/gallery-images/dj.jpg" style="width:100%" onclick="currentSlide(9)" alt="DJ">
         </div>
         <div class="column">
-          <img class="demo cursor images" src="/img/gallery-images/dj-2.jpg" style="width:100%" onclick="currentSlide(10)" alt="DJ">
+          <img class="demo cursor images" src="../img/gallery-images/dj-2.jpg" style="width:100%" onclick="currentSlide(10)" alt="DJ">
         </div>
         <div class="column">
-          <img class="demo cursor images" src="/img/gallery-images/dj-4.jpg" style="width:100%" onclick="currentSlide(11)" alt="DJ">
+          <img class="demo cursor images" src="../img/gallery-images/dj-4.jpg" style="width:100%" onclick="currentSlide(11)" alt="DJ">
         </div>
         <div class="column">
-          <img class="demo cursor images" src="/img/gallery-images/guit.jpg" style="width:100%" onclick="currentSlide(12)" alt="Solo">
+          <img class="demo cursor images" src="../img/gallery-images/guit.jpg" style="width:100%" onclick="currentSlide(12)" alt="Solo">
         </div>
         <div class="column">
-          <img class="demo cursor images" src="/img/gallery-images/bridge-2.jpg" style="width:100%" onclick="currentSlide(13)" alt="interlude">
+          <img class="demo cursor images" src="../img/gallery-images/bridge-2.jpg" style="width:100%" onclick="currentSlide(13)" alt="interlude">
         </div>
         <div class="column">
-          <img class="demo cursor images" src="/img/gallery-images/concert-8-tall.jpg" style="width:100%" onclick="currentSlide(14)" alt="Event">
+          <img class="demo cursor images" src="../img/gallery-images/concert-8-tall.jpg" style="width:100%" onclick="currentSlide(14)" alt="Event">
         </div>
         <div class="column">
-          <img class="demo cursor images" src="/img/gallery-images/concert-10-tall.jpg" style="width:100%" onclick="currentSlide(15)" alt="Experience">
+          <img class="demo cursor images" src="../img/gallery-images/concert-10-tall.jpg" style="width:100%" onclick="currentSlide(15)" alt="Experience">
         </div>
         <div class="column">
-          <img class="demo cursor images" src="/img/gallery-images/concert-11-tall.jpg" style="width:100%" onclick="currentSlide(16)" alt="Event">
+          <img class="demo cursor images" src="../img/gallery-images/concert-11-tall.jpg" style="width:100%" onclick="currentSlide(16)" alt="Event">
         </div>
         <div class="column">
-          <img class="demo cursor images" src="/img/gallery-images/dj-3-tall.jpg" style="width:100%" onclick="currentSlide(17)" alt="DJ">
+          <img class="demo cursor images" src="../img/gallery-images/dj-3-tall.jpg" style="width:100%" onclick="currentSlide(17)" alt="DJ">
         </div>
         <div class="column">
-          <img class="demo cursor images" src="/img/gallery-images/dj-5-tall.jpg" style="width:100%" onclick="currentSlide(18)" alt="DJ">
+          <img class="demo cursor images" src="../img/gallery-images/dj-5-tall.jpg" style="width:100%" onclick="currentSlide(18)" alt="DJ">
         </div>
         <div class="column">
-          <img class="demo cursor images" src="/img/gallery-images/closer.jpg" style="width:100%" onclick="currentSlide(19)" alt="Closer">
+          <img class="demo cursor images" src="../img/gallery-images/closer.jpg" style="width:100%" onclick="currentSlide(19)" alt="Closer">
         </div>
      </div>
 
