change icon in the nav

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </div>
         <div class="icons">
             <a href="#">  <i class="fab fa-facebook"></i></a>
-            <a href="#"> <i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-instagram-square"></i></a>
             <a href="#"> <i class="fab fa-pinterest-square"></i></a>
             <a href="#"><i class="fab fa-twitter-square"></i></a>
         </div>
