fixed landingpage its ready

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a href="#"><i class="mic_nav fas fa-microphone-alt"></i></a>
             <a href="#">About Us</a>
             <a href="#"> News</a>
-            <a href="#">Contact</a>ö
+            <a href="#">Contact</a>
             <a href="#">Gallery</a>
         </div>
         <div class="nav_buttons">
