--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <a href="../pages/about-us.html">About Us</a>
                 <a href="../pages/news.html"> News</a>
                 <a href="../pages/contact.html">Contact</a>
-                <a href="../pages/gallery.html">gallery</a>
+                <a href="../pages/gallery.html">Gallery</a>
             </div>
             <div class="nav_buttons">
                 <button class="btn">Sign Up</button>
