--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -24,11 +24,11 @@
 
     <div class="wrap_nav">
         <div class="nav_links">
-            <a href="/index.html"><i class="mic_nav fas fa-microphone-alt"></i></a>
-            <a href="/pages/about-us.html">About Us</a>
-            <a href="/pages/news.html"> News</a>
-            <a href="contact.html">Contact</a>
-            <a href="gallery.html">Gallery</a>
+            <a href="../index.html"><i class="mic_nav fas fa-microphone-alt"></i></a>
+            <a href="../pages/about-us.html">About Us</a>
+            <a href="../pages/news.html"> News</a>
+            <a href="../pages/contact.html">Contact</a>
+            <a href="../pages/gallery.html">Gallery</a>
         </div>
         <div class="nav_buttons">
             <button class="btn">Sign Up</button>
