--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -172,7 +172,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Tarkan Tevetoğlu </h5>
                         <p class="card-text"> singer and songwriter</p>
-                        <a href="#" class="btn btn-primary">More</a>
+                        <a href="../pages/tarkan.html" class="btn btn-primary">More</a>
                     </div>
                 </div>
                 <div class="card border-0 rounded" style="width: 15rem;">
