--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -188,7 +188,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Nicko Mcbrain</h5>
                         <p class="card-text">musician and drummer</p>
-                        <a href="#" class="btn btn-primary">More</a>
+                        <a href="../pages/nicko.html" class="btn btn-primary">More</a>
                     </div>
                 </div>
                 <div class="card border-0 rounded" style="width: 15rem;">
