--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -196,7 +196,7 @@
                     <div class="card-body">
                         <h5 class="card-title">George Clanton</h5>
                         <p class="card-text">electronic musician,singer</p>
-                        <a href="#" class="btn btn-primary">More</a>
+                        <a href="../pages/george.html" class="btn btn-primary">More</a>
                     </div>
                 </div>
 
