--- a/pages/george.html
+++ b/pages/george.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>George Clanton</title>
 
-    <link rel="stylesheet" href="styles/george.css">
+    <link rel="stylesheet" href="../styles/george.css">
 
     <link href="//db.onlinewebfonts.com/c/7e8601c112331686d7e3e6b525d0793b?family=FF+Blur" rel="stylesheet" type="text/css"/>
 
