--- a/pages/george.html
+++ b/pages/george.html
@@ -55,6 +55,13 @@
 
     </div>
   </div>
+    
+  <div class="icons-set">
+    <a href="#"> <i class="fab fa-facebook"></i></a>
+    <a href="#"><i class="fab fa-instagram-square"></i></a>
+    <a href="#"> <i class="fab fa-pinterest-square"></i></a>
+    <a href="#"><i class="fab fa-twitter-square"></i></a>
+  </div>
 
  <div class="container">
 
