--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -180,7 +180,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Kaki King</h5>
                         <p class="card-text">guitarist and composer</p>
-                        <a href="#" class="btn btn-primary">More</a>
+                        <a href="../pages/kaki.html" class="btn btn-primary">More</a>
                     </div>
                 </div>
                 <div class="card border-0 rounded" style="width: 15rem;">
