--- a/Jocke/jocke.html
+++ b/Jocke/jocke.html
@@ -8,7 +8,7 @@
     <script src="https://kit.fontawesome.com/c9c615f772.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="jocke.css">
+    <link rel="stylesheet" href="./jocke.css">
     <title>Joakim</title>
 </head>
 <body>
@@ -16,11 +16,11 @@
     <div class="container">
         <div class="wrap_nav">
             <div class="nav_links">
-                <a href="index.html"><i class="mic_nav fas fa-microphone-alt"></i></a>
-                <a href="./pages/about-us.html">About Us</a>
-                <a href="./pages/news.html"> News</a>
-                <a href="./pages/contact.html">Contact</a>
-                <a href="./pages/gallery.html">Gallery</a>
+                <a href="../index.html"><i class="mic_nav fas fa-microphone-alt"></i></a>
+                <a href="../pages/about-us.html">About Us</a>
+                <a href="../pages/news.html"> News</a>
+                <a href="../pages/contact.html">Contact</a>
+                <a href="../pages/gallery.html">Gallery</a>
             </div>
             <div class="nav_buttons">
                 <button class="btn">Sign Up</button>
@@ -41,19 +41,19 @@
     <div class="slider">
 		<!-- fade css -->
 		<div class="myslide fade">
-			<img src="/images/image1-jocke.jpeg" style="width: 100%; height: 100%;">
+			<img src="./images/image1-jocke.jpeg" style="width: 100%; height: 100%;">
 		</div>
 		
 		<div class="myslide fade">
-			<img src="/images/image2-jocke.webp" style="width: 100%; height: 100%;">
+			<img src="./images/image2-jocke.webp" style="width: 100%; height: 100%;">
 		</div>
 		
 		<div class="myslide fade">
-			<img src="/images/image3-jocke.jpg" style="width: 100%; height: 100%;">
+			<img src="./images/image3-jocke.jpg" style="width: 100%; height: 100%;">
 		</div>
 		
 		<div class="myslide fade">
-			<img src="/images/image4-jocke.jpg" style="width: 100%; height: 100%;">
+			<img src="./images/image4-jocke.jpg" style="width: 100%; height: 100%;">
 		</div>
 		
 		<!-- /fade css -->
