--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -164,7 +164,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Joakim Brodén</h5>
                         <p class="card-text">musician and songwriter</p>
-                        <a href="#" class="btn btn-primary">More</a>
+                        <a href="../pages/jocke.html" class="btn btn-primary">More</a>
                     </div>
                 </div>
                 <div class="card border-0 rounded" style="width: 15rem; ">
